--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "rollup:watch": "cross-env NODE_ENV=development rollup -c rollup.config.js -w",
     "rollup:prod": "cross-env NODE_ENV=production rollup -c rollup.config.js",
     "rollup:clean": "node ./scripts/clean-build.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:c": "jest --coverage" 
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Kelvin",
+  "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-node-resolve": "^7.1.3",
@@ -34,6 +35,10 @@
     "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-uglify": "^6.0.4",
     "rollup-watch": "^4.3.1",
+    "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
